--- a/projects/casabicicleta.html
+++ b/projects/casabicicleta.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="../index.html"><div class="Logo"><img src="../img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
+    <a href="../index.html">
+        <div class="Logo"><img src="../img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div>
+    </a>
     <div class="navbarElement">
         <p><a href="../presentation.html">PRÉSENTATION</a></p>
         <p><a href="../project.html">PROJETS</a></p>
@@ -55,15 +57,18 @@
         </div>
         <div>
             <h2 class="infoMiniTitle">ANNÉE</h2>
-            <p class="infoMiniText">2025</p>
+            <p class="infoMiniText">2024</p>
         </div>
     </div>
     <div class="informationsProjectRight">
         <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">La <STRONG>Casa Bicicleta</STRONG> est une association située à Perpignan qui promeut l’usage du vélo au quotidien. Elle propose un atelier participatif où chacun peut réparer son vélo avec de l’aide et des outils sur place, ainsi que des animations et activités autour du cyclisme. C’est un lieu convivial et solidaire, ouvert à tous.</p>
+        <p class="infoMiniText">La <STRONG>Casa Bicicleta</STRONG> est une association située à Perpignan qui promeut
+            l’usage du vélo au quotidien. Elle propose un atelier participatif où chacun peut réparer son vélo avec de
+            l’aide et des outils sur place, ainsi que des animations et activités autour du cyclisme. C’est un lieu
+            convivial et solidaire, ouvert à tous.</p>
     </div>
 </div>
-<h1 class="titreIdentite">Idéntitée visuelle</h1>
+<h1 class="titreIdentite">Idéntité visuelle</h1>
 <div class="projectContentGrizzlys">
     <div class="colorsProjectGrizzlys">
         <div class="fleche">
@@ -71,17 +76,37 @@
             <p class="TextLogo">Le logo</p>
         </div>
         <div class="logoGrizzlys">
-            <img class="imgLogoBages" src="../img/bages/logo.webp">
+            <img class="imgLogoBages" src="../img/casbicicleta/logo.png">
         </div>
-        <div class="colorVert1">
-        </div>
-        <div class="colorVert2">
-        </div>
-        <div class="colorVert3">
+        <div class="colorRouge3">
         </div>
         <div class="colorBlanc">
         </div>
-
+        <div class="colorNoir">
+        </div>
+    </div>
+</div>
+<div class="containerCasa">
+    <div>
+        <div class="divCreaGrid">
+            <p class="textHover ">Ce visuel annonçant une balade à vélo est une publication Instagram : il précise la
+                date et l'horaire du rendez-vous pour inviter les gens à participer.
+            </p>
+            <img class="creaGrid" src="../img/casbicicleta/BALADE_A_VELO.png" alt="Création Grizzlys Catalans">
+        </div>
+    </div>
+    <div class="tres">
+        <div class="divimgRoueFleche">
+            <img src="../img/grizzlys/petiteFleche.webp" alt="Petite Fleche" class="FlecheRoue">
+            <div class="textRoueFleche">
+                <p class="textRoue">Concept d’évocation</p>
+                <img src="../img/casbicicleta/roue.png" alt="roue" class="roue">
+            </div>
+        </div>
+        <p class="descriptionRoue">Le visuel représente le vélo, le partage et la convivialité à travers une roue en forme de cœur. Le rouge
+            évoque à la fois le logo et l’amour, dans lequel chacun peut se reconnaître. Les rayons rappellent ceux du
+            soleil, symbole de joie de vivre et d’énergie positive de l’association.
+        </p>
     </div>
 </div>
 
@@ -89,20 +114,14 @@
     <nav class="footerNavbar">
         <div class="footerLogosLeft">
             <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/>
-                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
                 <span class="footerLinkLabel">LINKEDIN</span>
             </a>
-
-            <a href="mailto:anoukthls@icloud.com" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/>
-                </svg>
+            <a href="mailto:anoukthms@icloud.com" class="footerLink">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
                 <span class="footerLinkLabel">MAIL</span>
             </a>
         </div>
-
         <div class="footerCopyright">
             <p>© 2025 – ANOUK THOMAS</p>
         </div>
