--- a/projects/escapix.html
+++ b/projects/escapix.html
@@ -31,7 +31,7 @@
 </nav>
 <div class="titleimg">
     <div class="imageprincipal">
-        <img class="imageprincipalBages" src="../img/vincenzo/imagePrincipal.jpg" alt="Union Basket Des Aspres">
+        <img class="imageprincipalBages" src="../img/escapix/imagePrincipal.png" alt="Union Basket Des Aspres">
     </div>
     <div class="projecttitleGrizzlys">
         <div class="titletext">
@@ -63,7 +63,7 @@
         <p class="infoMiniText"><STRONG>Escapix</STRONG> est un escape game situé à Perpignan, proposant des expériences immersives à vivre en équipe. Le lieu dispose de 5 salles, chacune offrant un univers et des défis différents, dans une ambiance ludique et conviviale. C’est une activité idéale pour partager un moment original entre amis, en famille ou entre collègues.</p>
     </div>
 </div>
-<h1 class="titreIdentite">Idéntitée visuelle</h1>
+<h1 class="titreIdentite">Idéntité visuelle</h1>
 <div class="projectContentGrizzlys">
     <div class="colorsProjectGrizzlys">
         <div class="fleche">
@@ -71,13 +71,15 @@
             <p class="TextLogo">Le logo</p>
         </div>
         <div class="logoGrizzlys">
-            <img class="imgLogoBages" src="../img/bages/logo.webp">
+            <img class="imgLogoBages" src="../img/escapix/logo.png">
         </div>
-        <div class="colorVert1">
+        <div class="colorBleu1">
         </div>
-        <div class="colorVert2">
+        <div class="colorBleu2">
         </div>
-        <div class="colorVert3">
+        <div class="colorBleu3">
+        </div>
+        <div class="colorJaune3">
         </div>
         <div class="colorBlanc">
         </div>
@@ -89,20 +91,14 @@
     <nav class="footerNavbar">
         <div class="footerLogosLeft">
             <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/>
-                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
                 <span class="footerLinkLabel">LINKEDIN</span>
             </a>
-
-            <a href="mailto:anoukthls@icloud.com" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/>
-                </svg>
+            <a href="mailto:anoukthms@icloud.com" class="footerLink">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
                 <span class="footerLinkLabel">MAIL</span>
             </a>
         </div>
-
         <div class="footerCopyright">
             <p>© 2025 – ANOUK THOMAS</p>
         </div>
