--- a/projects/basket.html
+++ b/projects/basket.html
@@ -55,12 +55,12 @@
         </div>
         <div>
             <h2 class="infoMiniTitle">ANNÉE</h2>
-            <p class="infoMiniText">2025</p>
+            <p class="infoMiniText">2025 - 2026</p>
         </div>
     </div>
     <div class="informationsProjectRight">
         <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">L’Union Basket des Aspres fête ses 50 ans d’existence depuis sa création en 1976. À l’origine, le club portait le nom de Bages Basket Club des Aspres et des Albères (BBCAA). Cette année, l’association a adopté un nouveau logo : désormais appelée Union Basket des Aspres, elle affiche une identité visuelle entièrement renouvelée, avec un nouveau nom et de nouvelles couleurs.
+        <p class="infoMiniText">L’<strong>Union Basket des Aspres</strong> fête ses 50 ans d’existence depuis sa création en 1976. À l’origine, le club portait le nom de Bages Basket Club des Aspres et des Albères (BBCAA). Cette année, l’association a adopté un nouveau logo : désormais appelée Union Basket des Aspres, elle affiche une identité visuelle entièrement renouvelée, avec un nouveau nom et de nouvelles couleurs.
             Implantée dans les communes de Brouilla, Bages et Saint-Génis des Fontaines, l’UBA accueille aujourd’hui près de 200 licenciés répartis sur une dizaine d’équipes, de U7 aux loisirs.</p>
     </div>
 </div>
