--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -320,7 +320,7 @@
 
 </div>
 
-<!--<script async src="//www.instagram.com/embed.js"></script>-->
+<script async src="//www.instagram.com/embed.js"></script>
 
 </div>
 <h1 class="titreIdentite">Carte Cadeau</h1>
