--- a/projects/casabicicleta.html
+++ b/projects/casabicicleta.html
@@ -40,7 +40,7 @@
             <h1>CASA BICICLETA</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">PROJET SCOLAIRE</p>
+            <p class="subtitleProject">COMMUNICATION ASSOCIATIVE</p>
         </div>
     </div>
 </div>
