--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -38,7 +38,7 @@
             <h1>CATAL'ATTITUDE</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">STAGE</p>
+            <p class="subtitleProject">COMMUNICATION COMMERCIALE</p>
         </div>
     </div>
 </div>
@@ -305,7 +305,7 @@
 
 <div class="imgGrid">
 
-    <div class="divCreaGrid" style="width: 350px; height: 480px;">
+    <div class="divCreaGrid" style="width: 350px; height: 500px;">
         <p class="textHover">Publication Instagram pour un concours spécial 5 ans : elle annonce une box surprise d'une valeur de 50 € à gagner pour fêter l'anniversaire de la marque.</p>
         <img class="creaGrid" src="../img/Catal’attitude/Post%20concours%205%20ans.png" alt="Création Catal'attitude">
     </div>
