--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio - CIENFUEGOS</title>
+    <title>Portfolio - Cienfuegos</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -38,7 +38,7 @@
             <h1>FESTIVAL CIENFUEGOS</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">PROJET SCOLAIRE</p>
+            <p class="subtitleProject">COMMUNICATION ÉVÈNEMENTIELLE</p>
         </div>
     </div>
 </div>
