--- a/projects/lycee.html
+++ b/projects/lycee.html
@@ -38,7 +38,7 @@
             <h1>LYCÉE ARISTIDE MAILLOL</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">PROJET SCOLAIRE</p>
+            <p class="subtitleProject">COMMUNICATION PUBLIQUE</p>
         </div>
     </div>
 </div>
