--- a/projects/vincenzo.html
+++ b/projects/vincenzo.html
@@ -38,7 +38,7 @@
             <h1>RESTAURANT VINCENZO</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">PROJET SCOLAIRE FICTIF</p>
+            <p class="subtitleProject">COMMUNICATION COMMERCIALE</p>
         </div>
     </div>
 </div>
@@ -96,7 +96,7 @@
     </a>
     <div class="FlecheTextDroite">
         <img src="../img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheDroite">
-        <p class="textOrdiClick">Viens découvir en cliquant sur l'ordinateur</p>
+        <p class="textOrdiClick">Viens découvir le site en cliquant sur l'ordinateur</p>
 
     </div>
 </div>
