--- a/projects/basket.html
+++ b/projects/basket.html
@@ -38,7 +38,7 @@
             <h1>UNION BASKET DES ASPRES</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">ENGAGEMENT ÉTUDIANT</p>
+            <p class="subtitleProject">COMMUNICATION ASSOCIATIVE SPORTIVE</p>
         </div>
     </div>
 </div>
