--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -38,7 +38,7 @@
             <h1>LES GRIZZLYS CATALANS</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">STAGE</p>
+            <p class="subtitleProject">COMMUNICATION ASSOCIATIVE SPORTIVE PROFESSIONELLE</p>
         </div>
     </div>
 </div>
