change press page

--- a/presentation.html
+++ b/presentation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Porfolio -présentation</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="project.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
     <link rel="icon" type="image/x-icon" href="./img/logo.ico">
     <link rel="apple-touch-icon" href="./img/logo.png">
@@ -31,7 +32,7 @@
     </nav>
     <div class="presentationContainer" >
         <div class="presentationText">
-            <h1 class="competencetitle">Présentation</h1>
+            <h1 class="competencetitle">Carnet de bord</h1>
             <p>Bienvenue sur ma page de présentation. Ici, vous trouverez des informations sur mon parcours, mes
                 compétences et mes expériences professionnelles.</p>
             <h2 class="competencetitle">Mes Compétences</h2>
@@ -59,14 +60,55 @@
                 <p id="nomLogo"></p>
                 <button class="carousel-btn right" id="nextBtn">›</button>
             </div>
-
-
-
         </div>
         <div>
             <img src="./img/ANOUK_THOMAS .png" class="passport">
         </div>
     </div>
+
+    <div class="avionDiv"><img src="./img/presentation/avion.png" alt="avion" class="avionPresentation"></div>
+
+
+    <div class="text">
+        <h1 class="titreIdentitePresentation">Dans ma valise : mes indispensables de communicante</h1>
+    </div>
+
+    <div class="FlecheTextSurligneur">
+        <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheSurligneur">
+        <p class="textSurligneur">SURLIGNEURS</p>
+    </div>
+    <div class="bacAeroport">
+        <div>
+            <div class="FlecheTextIpad">
+                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheIpad">
+                <p class="textIpad">IPAD</p>
+            </div>
+            <div class="FlecheTextBasket">
+                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheBasket">
+                <p class="textBasket">AIRPODS</p>
+            </div>
+            <div class="FlecheTextBasket">
+                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheBasket">
+                <p class="textBasket">BASKET</p>
+            </div>
+        </div>
+        <img src="./img/presentation/Mes_indispensables_en_communication.png" alt="indispensables en communication" class="indispensablesCom">
+        <div>
+            <div class="FlecheTextIphone">
+                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheIphone">
+                <p class="textIphone">IPHONE</p>
+            </div>
+            <div class="FlecheTextAirpods">
+                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheAirpods">
+                <p class="textAirpods">AIRPODS</p>
+            </div>
+            <div class="FlecheTextMacbook">
+                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheMacbook">
+                <p class="textMacbook">MACBOOK</p>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <nav class="footerNavbar">
             <div class="footerLogosLeft">
