dernier changement avant lunid + modal

--- a/presentation.html
+++ b/presentation.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./img/logo.ico">
     <link rel="apple-touch-icon" href="./img/logo.png">
 </head>
-<body>
+<body style="overflow-x: hidden;">
 <div class="PagePres">
     <nav class="navbar">
         <a href="index.html"><div class="Logo"><img src="./img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
@@ -32,9 +32,11 @@
     </nav>
     <div class="presentationContainer" >
         <div class="presentationText">
-            <h1 class="competencetitle">Carnet de bord</h1>
-            <p>Bienvenue sur ma page de présentation. Ici, vous trouverez des informations sur mon parcours, mes
-                compétences et mes expériences professionnelles.</p>
+            <h1 class="competencetitle">Profil d'embarquement</h1>
+            <h2 class="h2pres">ladies & gentleman, bienvenue à bord !</h2>
+            <p class="presentation">Moi, c'est Anouk THOMAS, passionnée par les nouvelles aventures et étudiante en 2ème année de BTS Communication.
+                <br>
+                Pour moi, communiquer, c’est un peu comme préparer un voyage. Ce n'est pas juste envoyer une information, c’est choisir où on veut aller, tracer son propre chemin et surtout, vivre l'aventure ensemble.</p>
             <h2 class="competencetitle">Mes Compétences</h2>
             <div class="carousel-container">
                 <button class="carousel-btn left" id="prevBtn">‹</button>
