--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -320,7 +320,7 @@
 
 </div>
 
-<script async src="//www.instagram.com/embed.js"></script>
+<!--<script async src="//www.instagram.com/embed.js"></script>-->
 
 </div>
 <h1 class="titreIdentite">Carte Cadeau</h1>
@@ -381,7 +381,12 @@
 </footer>
 
 
-
+<div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+</div>
+    <script src="../modal.js"></script>
     <script src="../data.js"></script>
     <script src="../script.js"></script>
 </body>
