--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -265,9 +265,15 @@
     </nav>
 </footer>
 
+<div id="myModal" class="modalGrizzly">
+    <span class="closeGrizzly">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+</div>
+<script src="../modal.js">
 
-
-<script src="../data.js"></script>
+</script> src="../data.js"></script>
 <script src="../script.js"></script>
+
 </body>
 </html>
