ajout de ma passion dans présentation

--- a/presentation.html
+++ b/presentation.html
@@ -33,7 +33,7 @@
     <div class="presentationContainer" >
         <div class="presentationText">
             <h1 class="competencetitle">Profil d'embarquement</h1>
-            <h2 class="h2pres">ladies & gentleman, bienvenue à bord !</h2>
+            <h2 class="h2pres">LADIES & GENTLEMAN, BIENVENUE À BORD !</h2>
             <p class="presentation">Moi, c'est Anouk THOMAS, passionnée par les nouvelles aventures et étudiante en 2ème année de BTS Communication.
                 <br>
                 Pour moi, communiquer, c’est un peu comme préparer un voyage. Ce n'est pas juste envoyer une information, c’est choisir où on veut aller, tracer son propre chemin et surtout, vivre l'aventure ensemble.</p>
@@ -65,6 +65,23 @@
         </div>
         <div>
             <img src="./img/ANOUK_THOMAS .png" class="passport">
+        </div>
+    </div>
+
+    <div class="passion">
+        <h1 class="passionTitle">MA PASSION</h1>
+        <p class="passionSubTitle">Le basket</p>
+        <p class="passiontext">Je suis passionnée par le sport depuis petite et plus particulièrement le basket que je pratique en club depuis l’âge de 5 ans. </p>
+    </div>
+    <div class="FlyersCapitaine">
+        <div class="flyers">
+            <img class="imgFlyerPassion1" src="./img/bages/petite.jpg" alt="Flyer Grizzlys Catalans">
+            <img class="imgFlyerPassion2" src="./img/bages/moyenne.jpg" alt="Flyer Grizzlys Catalans">
+            <img class="imgFlyerPassion3" src="./img/bages/grande.jpg" alt="Flyer Grizzlys Catalans">
+        </div>
+        <div class="divCapitaine">
+            <h2 class="capitaine">Capitaine</h2>
+            <p class="capitaineText">Être capitaine de mon équipe, me donne une grande responsabilité sur le terrain. Cela renforce mes compétences à motiver et unir mes coéquipières, à communiquer et à devoir prendre certaines décisions.</p>
         </div>
     </div>
 
@@ -102,7 +119,7 @@
             </div>
             <div class="FlecheTextAirpods">
                 <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheAirpods">
-                <p class="textAirpods">AIRPODS</p>
+                <p class="textAirpods">CARNET</p>
             </div>
             <div class="FlecheTextMacbook">
                 <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheMacbook">
