fin de la page casa

--- a/presentation.html
+++ b/presentation.html
@@ -80,7 +80,7 @@
             <img class="imgFlyerPassion3" src="./img/bages/grande.jpg" alt="Flyer Grizzlys Catalans">
         </div>
         <div class="divCapitaine">
-            <h2 class="capitaine">Capitaine</h2>
+            <h2 class="capitaine">CAPITAINE</h2>
             <p class="capitaineText">Être capitaine de mon équipe, me donne une grande responsabilité sur le terrain. Cela renforce mes compétences à motiver et unir mes coéquipières, à communiquer et à devoir prendre certaines décisions.</p>
         </div>
     </div>
