--- a/projects/casabicicleta.html
+++ b/projects/casabicicleta.html
@@ -76,7 +76,8 @@
             <p class="TextLogo">Le logo</p>
         </div>
         <div class="logoGrizzlys">
-            <img class="imgLogoBages" src="../img/casbicicleta/logo.png">
+            <img class="imgLogoBages logo-light" src="../img/casbicicleta/logo.png" alt="Logo Mode Clair">
+            <img class="imgLogoBages logo-dark" src="../img/casbicicleta/logo1.png" alt="Logo Mode Sombre">
         </div>
         <div class="colorRouge3">
         </div>
@@ -88,12 +89,10 @@
 </div>
 <div class="containerCasa">
     <div>
-        <div class="divCreaGrid">
-            <p class="textHover ">Ce visuel annonçant une balade à vélo est une publication Instagram : il précise la
-                date et l'horaire du rendez-vous pour inviter les gens à participer.
-            </p>
-            <img class="creaGrid" src="../img/casbicicleta/BALADE_A_VELO.png" alt="Création Grizzlys Catalans">
-        </div>
+
+        <p class="textCommuniquer">Comminiquer de presse</p>
+        <img class="imageCommuniquer" src="../img/casbicicleta/text.png" alt="Création Grizzlys Catalans">
+
     </div>
     <div class="tres">
         <div class="divimgRoueFleche">
@@ -108,6 +107,26 @@
             soleil, symbole de joie de vivre et d’énergie positive de l’association.
         </p>
     </div>
+</div>
+<div class="divMotMele">
+    <div>
+        <div class="divCreaGrid">
+            <p class="textHover ">Ce visuel annonçant une balade à vélo est une publication Instagram : il précise la
+                date et l'horaire du rendez-vous pour inviter les gens à participer.
+            </p>
+            <img class="creaGrid" src="../img/casbicicleta/BALADE_A_VELO.png" alt="Création Grizzlys Catalans">
+        </div>
+    </div>
+    <div class="motMeleDiv">
+        <img src="../img/casbicicleta/motmele.png" alt="motmele" class="motmele">
+        <p class="descriptionMotMele">Ce jeu de mots mêlés est utilisé lors des visites de la Casa Bicicleta dans les écoles : il permet d'occuper les enfants pendant les ateliers tout en leur faisant découvrir les mots importants de l'association.</p>
+    </div>
+</div>
+
+<div class="buttonStratégie">
+    <a href="https://docs.google.com/document/d/1_jMyFfS3k2kqU3t2qcasHHug1riyE0P1TLaMNE9kIEo/edit?usp=sharing">
+        <button class="lienStratégie">Lien Stratégie</button>
+    </a>
 </div>
 
 <footer>
