image moins lourde

--- a/presentation.html
+++ b/presentation.html
@@ -108,7 +108,7 @@
             </div>
             <div class="FlecheTextBasket">
                 <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheBasket">
-                <p class="textBasket">BASKET</p>
+                <p class="textBasket">SNEAKERS</p>
             </div>
         </div>
         <img src="./img/presentation/Mes_indispensables_en_communication.png" alt="indispensables en communication" class="indispensablesCom">
