--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -213,7 +213,7 @@
     <div class="iphone">
         <div class="textUnderPhone">
             <img class="tel" src="../img/grizzlys/tel.webp" alt="">
-            <img class="video1 video" src="../img/Catal’attitude/calendrier.png " alt="calendrirer">
+            <img class="video1 video" src="../img/Catal’attitude/calendrier.jpg " alt="calendrirer">
             <p class="descriptionVideo">Teasing visuel pour le lancement du calendrier de l'Avent.</p>
         </div>
     </div>
@@ -231,11 +231,11 @@
 <h1 class="titreIdentite">Flyers</h1>
 <div class="flyers">
     <img class="imgFlyerCatalan1"
-         src="../img/Catal’attitude/Flyer%20A5%20professionnels.png"
+         src="../img/Catal’attitude/Flyer%20A5%20professionnels.jpg"
          alt="Flyer Grizzlys Catalans">
 
     <img class="imgFlyerCatalan3"
-         src="../img/Catal’attitude/Flyer%20A5%20particuliers.png"
+         src="../img/Catal’attitude/Flyer%20A5%20particuliers.jpg"
          alt="Flyer Grizzlys Catalans">
 </div>
 
