--- a/projects/casabicicleta.html
+++ b/projects/casabicicleta.html
@@ -90,7 +90,7 @@
 <div class="containerCasa">
     <div>
 
-        <p class="textCommuniquer">Communiquer de presse</p>
+        <p class="textCommuniquer">Communiqué de presse</p>
         <img class="imageCommuniquer" src="../img/casbicicleta/text.png" alt="Création Grizzlys Catalans">
 
     </div>
