compressio des photo

--- a/presentation.html
+++ b/presentation.html
@@ -33,7 +33,7 @@
     <div class="presentationContainer" >
         <div class="presentationText">
             <h1 class="competencetitle">Profil d'embarquement</h1>
-            <h2 class="h2pres">LADIES & GENTLEMAN, BIENVENUE À BORD !</h2>
+            <h2 class="h2pres">LADIES & GENTLEMEN, BIENVENUE À BORD !</h2>
             <p class="presentation">Moi, c'est Anouk THOMAS, passionnée par les nouvelles aventures et étudiante en 2ème année de BTS Communication.
                 <br>
                 Pour moi, communiquer, c’est un peu comme préparer un voyage. Ce n'est pas juste envoyer une information, c’est choisir où on veut aller, tracer son propre chemin et surtout, vivre l'aventure ensemble.</p>
