correction de bug

--- a/presentation.html
+++ b/presentation.html
@@ -47,7 +47,7 @@
                         <li class="carousel-slide" id="Illustrator"><img src="./img/caroussel/Illustrator.PNG" alt="Logo 12"></li>
                         <li class="carousel-slide" id="Word"><img src="./img/caroussel/word.PNG" alt="Logo 7"></li>
                         <li class="carousel-slide" id="Excel"><img src="./img/caroussel/Exel.PNG" alt="Logo 13"></li>
-                        <li class="carousel-slide" id="Wordpress"><img src="./img/caroussel/wordpress.png" alt="Logo 4"></li>
+                        <li class="carousel-slide" id="Wordpress"><img src="./img/caroussel/wordpress%20(1).png" alt="Logo 4"></li>
                         <li class="carousel-slide" id="Drive"><img src="./img/caroussel/Drive.PNG" alt="Logo 14"></li>
                         <li class="carousel-slide" id="Trello"><img src="./img/caroussel/trello.PNG" alt="Logo 6"></li>
                         <li class="carousel-slide" id="Capcut"><img src="./img/caroussel/Capcut.webp" alt="Logo 2"></li>
